--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"main": "index.js",
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
-		"lint": "ESLINT_USE_FLAT_CONFIG=false eslint --ext .ts,.jsx,.tsx,.js --fix --quiet ./packages",
+		"lint": "ESLINT_USE_FLAT_CONFIG=false eslint --config .eslintrc.json --ext .ts,.jsx,.tsx,.js --fix --quiet ./packages",
 		"prepare": "husky"
 	},
 	"keywords": [],
