--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,16 +2,16 @@
 	"env": {
 		"browser": true,
 		"es2021": true,
-		"node": true
+		"node": true,
+		"jest": true
 	},
-	"overrides": [],
-	"parser": "@typescript-eslint/parser",
 	"extends": [
 		"eslint:recommended",
 		"plugin:@typescript-eslint/recommended",
 		"prettier",
 		"plugin:prettier/recommended"
 	],
+	"parser": "@typescript-eslint/parser",
 	"parserOptions": {
 		"ecmaVersion": "latest",
 		"sourceType": "module"
@@ -21,6 +21,9 @@
 		"prettier/prettier": "error",
 		"no-case-declarations": "off",
 		"no-constant-condition": "off",
-		"@typescript-eslint/ban-ts-comment": "off"
+		"@typescript-eslint/ban-ts-comment": "off",
+		"@typescript-eslint/no-unused-vars": "off",
+		"@typescript-eslint/no-var-requires": "off",
+		"no-unused-vars": "off"
 	}
 }
