--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
 		"lint": "ESLINT_USE_FLAT_CONFIG=false eslint --ext .ts,.jsx,.tsx --fix --quiet ./packages",
-		"build:dev": "rm -rf dist && rollup --conifg scripts/rollup/dev.config.js",
+		"build:dev": "rm -rf dist && rollup --bundleConfigAsCjs --config scripts/rollup/react.config.js",
 		"prepare": "husky"
 	},
 	"keywords": [],
@@ -16,6 +16,7 @@
 		"@commitlint/cli": "^19.2.1",
 		"@commitlint/config-conventional": "^19.1.0",
 		"@eslint/js": "^9.0.0",
+		"@rollup/plugin-commonjs": "^25.0.7",
 		"@typescript-eslint/eslint-plugin": "^7.5.0",
 		"commitlint": "^19.2.1",
 		"eslint": "^9.0.0",
@@ -25,6 +26,8 @@
 		"husky": "^9.0.11",
 		"prettier": "^3.2.5",
 		"rollup": "^4.14.0",
+		"rollup-plugin-generate-package-json": "^3.2.0",
+		"rollup-plugin-typescript2": "^0.36.0",
 		"typescript": "^5.4.4",
 		"typescript-eslint": "^7.5.0"
 	}
