--- a/package.json
+++ b/package.json
@@ -30,5 +30,8 @@
 		"rollup-plugin-typescript2": "^0.36.0",
 		"typescript": "^5.4.4",
 		"typescript-eslint": "^7.5.0"
+	},
+	"dependencies": {
+		"@rollup/plugin-replace": "^5.0.5"
 	}
 }
